Prepare v0.2.5-beta.1 release
